# dandi-s3-log-extraction

./: AGENTS.md  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: dailies.yml  daily_remote_tests.yml  daily_tests.yml  deploy_tests_on_pull_request.yml  publish_to_pypi_on_github_release.yml  remote_testing.yml  testing.yml  testing_live_services.yml  version_check.yml
src/dandi_s3_log_extraction/: __init__.py  _hidden_top_level_imports.py
src/dandi_s3_log_extraction/_command_line_interface/: _cli.py
src/dandi_s3_log_extraction/config/: _globals.py
src/dandi_s3_log_extraction/database/: _bundle.py
src/dandi_s3_log_extraction/extractors/: __init__.py  _dandi_extraction.awk  _dandi_remote_s3_log_access_extractor.py  _dandi_s3_log_access_extractor.py  _remote_s3_log_access_extractor.py  _s3_log_access_extractor.py  _utils.py
src/dandi_s3_log_extraction/ip_utils/: _update_index_to_region_codes.py
src/dandi_s3_log_extraction/summarize/: __init__.py  _generate_dandiset_summaries.py  _generate_dandiset_totals.py
tests/: README.md  conftest.py  test_asset_type_classification.py  test_beartype_validation.py  test_cli.py  test_dandi_extra_coverage.py  test_dandi_extraction.py  test_dandi_summaries.py  test_database.py  test_delivery_ratio.py  test_s3_benchmarking_and_assertions.py  test_s3_ip_utils.py  test_s3_summarize.py  test_s3_validators.py
tests/example_logs/: 2020-01-01-05-06-35-0123456789ABCDEF  2022-01-01-05-06-35-0123456789ABCDEF
tests/expected_output/extraction/zarr/cb65c877-882b-4554-8fa1-8f4e986e13a6/: bytes_sent.txt  timestamps.txt
tests/expected_output/records/: DandiS3LogAccessExtractor_file-processing-start.txt
tests/expected_output/sharing/: blob_index_to_id.yaml
tests/expected_output/sharing/extracted_activity.parquet/asset_type=b/blob_head=0/: 0.parquet
tests/expected_output/sharing/extracted_activity.parquet/asset_type=b/blob_head=1/: 0.parquet
tests/expected_output/sharing/extracted_activity.parquet/asset_type=b/blob_head=3/: 0.parquet
tests/expected_output/sharing/extracted_activity.parquet/asset_type=b/blob_head=4/: 0.parquet
tests/expected_output/sharing/extracted_activity.parquet/asset_type=b/blob_head=6/: 0.parquet
tests/expected_output/sharing/extracted_activity.parquet/asset_type=b/blob_head=8/: 0.parquet
tests/expected_output/summaries/: totals.json
tests/expected_output/summaries/000026/: by_asset.tsv  by_asset_per_week.tsv  by_asset_type_per_week.tsv  by_day.tsv  by_region.tsv
tests/expected_output/summaries/000108/: by_asset.tsv  by_asset_per_week.tsv  by_asset_type_per_week.tsv  by_day.tsv  by_region.tsv
tests/expected_output/summaries/000109/: by_asset.tsv  by_asset_per_week.tsv  by_asset_type_per_week.tsv  by_day.tsv  by_region.tsv
tests/expected_output/summaries/000126/: by_asset.tsv  by_asset_per_week.tsv  by_asset_type_per_week.tsv  by_day.tsv  by_region.tsv
tests/expected_output/summaries/000142/: by_asset.tsv  by_asset_per_week.tsv  by_day.tsv  by_region.tsv
tests/expected_output/summaries/000245/: by_asset.tsv  by_asset_per_week.tsv  by_asset_type_per_week.tsv  by_day.tsv  by_region.tsv
tests/expected_output/summaries/000293/: by_asset.tsv  by_asset_per_week.tsv  by_day.tsv  by_region.tsv
tests/expected_output/summaries/000296/: by_asset.tsv  by_asset_per_week.tsv  by_asset_type_per_week.tsv  by_day.tsv
tests/expected_output/summaries/000350/: by_asset.tsv  by_asset_per_week.tsv  by_day.tsv  by_region.tsv
tests/expected_output/summaries/000946/: by_asset.tsv  by_asset_per_week.tsv  by_asset_type_per_week.tsv  by_day.tsv  by_region.tsv
tests/expected_output/summaries/001344/: by_asset.tsv  by_asset_per_week.tsv  by_asset_type_per_week.tsv  by_day.tsv  by_region.tsv
tests/expected_output/summaries/archive/: by_asset_type_per_week.tsv  by_day.tsv  by_region.tsv
tests/expected_output/summaries/unassociated/: by_asset.tsv  by_day.tsv  by_region.tsv
tests/expected_output/summaries/undetermined/: by_asset.tsv  by_asset_per_week.tsv  by_asset_type_per_week.tsv  by_day.tsv  by_region.tsv
tests/extraction/: test_dandi_extraction.py
tests/test_mapping/: test_map_all_reduced_s3_logs_to_dandisets.py
(+22 files in other folders)
